Clear the callback ID when refreshing chrome://welcome-win10

This is to avoid the possible race when the page is
refreshed (so the callback id is now invalid) and the result
of GetIsPinnedToTaskbarState() from the previous javascript
call is received before the current page calls
getPinnedToTaskbarState().

Bug: 842925
Change-Id: I41e8cd3a40d22f98f020eb7bd02487713a62df98
Reviewed-on: https://chromium-review.googlesource.com/1058929
Reviewed-by: Tommy Li <tommycli@chromium.org>
Reviewed-by: Demetrios Papadopoulos <dpapad@chromium.org>
Commit-Queue: Patrick Monette <pmonette@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558845}