chrome/browser/ui/webui/welcome_win10_handler.cc
@@ -100,6 +100,10 @@ void WelcomeWin10Handler::RegisterMessages() {
                           base::Unretained(this)));
 }
 
+void WelcomeWin10Handler::OnJavascriptDisallowed() {
+  pinned_state_callback_id_.clear();
+}
+
 void WelcomeWin10Handler::HandleGetPinnedToTaskbarState(
     const base::ListValue* args) {
   DCHECK_CURRENTLY_ON(content::BrowserThread::UI);
