chrome/browser/ui/webui/welcome_win10_handler.h
@@ -26,6 +26,7 @@ class WelcomeWin10Handler : public content::WebUIMessageHandler {
 
   // content::WebUIMessageHandler:
   void RegisterMessages() override;
+  void OnJavascriptDisallowed() override;
 
  private:
   // Handlers for javascript calls.
